# PathFlowAI

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  LICENSE  README.md  meta.yaml  package-lock.json  patch_information.db  publish  pyproject.toml  setup.py
.eggs/bleach-3.1.0-py3.6.egg/EGG-INFO/: RECORD
Docker/: Dockerfile  requirements.txt
deprecated_work/: deprecated.py  unet2.py  unet3.py  unet4.py
deprecated_work/pathflowai.egg-info/: requires.txt  top_level.txt
docker/: Dockerfile  Singularity  requirements.txt  spec-list.pathflow.txt
docs/: .buildinfo  conf.py  genindex.html  index.html  index.rst  objects.inv  py-modindex.html
docs/_sources/: index.rst.txt
docs/doctrees/: environment.pickle  index.doctree
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/old_docs/: conf.py
docs/source/: conf.py  index.rst
example_transform_yamls/: albumentation_transforms.yaml  torch_transforms.yaml
experimental/: datasets.py  get_anchors.py  get_bounding_boxes.py  get_bounding_boxes_from_seg_point_masks.py  get_counts.py  object_detection.py
pathflowai/: __init__.py  cli_preprocessing.py  cli_visualizations.py  datasets.py  fast_scnn.py  losses.py  model_training.py  models.py  monitor_memory_usage.py  sampler.py  schedulers.py  stain_norm.py  unet.py  unet2.py  unet4.py  utils.py  visualize.py
pathflowai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: patch_information.db  sample.npy  sample.tif  test_utils.py  test_version.py  utils.py
tests/inputs/: TCGA-18-5592-01Z-00-DX1.npy  TCGA-18-5592-01Z-00-DX1_mask.npy
(+28 files in other folders)
